# edge-test

./: README.md  pyproject.toml
.github/workflows/: deploy.yml  test-functions.yml
supabase/: config.toml
supabase/functions/hello-world/: index.ts
tests/: hello-world_test.py
