[tool.poetry]
name = "edge-fn-integration-tests"
version = "0.1.0"
description = ""
authors = ["Rodrigo Mansueli Nunes <rodrigo@mansueli.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
